# prisma-error

./: .gitignore  Cargo.toml
prisma/: schema.prisma
prisma/migrations/20230322023520_0001/: migration.sql
src/: main.rs  prisma.rs
