[package]
name = "prisma-client"
version = "0.1.0"
edition = "2021"
default-run = "prisma-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.6" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.6" }
tokio = {version ="1", features = ["macros"]}
serde = {version = "*", features = ["derive"]}
